Tratamento de inconsistências enviadas por Diogo - Cadastro individual